--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/KusaReMKN/linknet/issues"
   },
-  "homepage": "https://github.com/KusaReMKN/linknet#readme"
+  "homepage": "https://github.com/KusaReMKN/linknet#readme",
+  "dependencies": {
+    "puppeteer": "^22.2.0"
+  }
 }
